# pysofra

./: .gitattributes  .gitignore  AUDITOR.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  mkdocs.yml  pyproject.toml  requirements-audit.txt
.github/workflows/: tests.yml
docs/: changelog.md  index.md  quickstart.md
docs/api/: builders.md  composition.md  core.md  design.md  effect_size.md  models.md  themes.md
docs/concepts/: limitations.md  sofratable.md  stability.md  tests.md  validation.md
docs/guides/: composition.md  exports.md  plots.md  survival.md  tbl_one.md  tbl_regression.md  tbl_summary.md  themes.md  weights.md
examples/: pysofra_showcase.html  pysofra_showcase.ipynb  pysofra_tutorial.html  pysofra_tutorial.ipynb
examples/gtsummary_comparison/: .gitignore  _build_notebook.py  gtsummary.html  gtsummary.json  gtsummary_comparison.html  gtsummary_comparison.ipynb  trial.csv
examples/gtsummary_comparison/R/: build_reference.R
examples/jss_case_study/: .gitignore  R_reference.json  _build_notebook.py  case_study.py  jss_case_study.html  jss_case_study.ipynb
examples/jss_case_study/R/: cross_validate.R
scripts/: generate_readme_assets.py  render_case_study.py  render_showcase.py  render_tutorial.py
src/pysofra/: __init__.py  cli.py
src/pysofra/core/: __init__.py  compose.py  format.py  frames.py  safety.py  schema.py  snapshot.py  table.py
src/pysofra/models/: __init__.py  extract.py  pool.py  regression.py  survival.py  uvregression.py
src/pysofra/plot/: __init__.py  _backend.py  forest.py  inline.py  km.py
src/pysofra/render/: __init__.py  _zip_determinism.py  base.py  docx.py  html.py  image.py  latex.py  markdown.py  pptx.py  quarto.py  typst.py  xlsx.py
src/pysofra/summary/: __init__.py  calibrate.py  design.py  effect_size.py  extras.py  smd.py  stats.py  tbl_cross.py  tbl_one.py  tbl_summary.py  tests.py  typing.py  weights.py
src/pysofra/themes/: __init__.py  registry.py
tests/: conftest.py  test_api_stability.py  test_case_study_acceptance.py  test_compose.py  test_compose_edges.py  test_conditional_formatting.py  test_cross_backend_consistency.py  test_design_regression.py  test_extract_edges.py  test_extras_edges.py  test_extras_edges_2.py  test_format.py  test_latex_pptx.py  test_misc_fixes.py  test_model_diagnostics.py  test_modifier_edges.py  test_multi_model.py  test_new_features_0_1_0a10.py  test_partial_modifiers.py  test_partials.py  test_pinned_references.py  test_plot_determinism.py  test_plot_embedding.py  test_plots.py  test_polars.py  test_pptx_overflow.py  test_property_invariants.py  test_rao_scott.py  test_regression.py  test_regressions.py  test_render_edges.py  test_render_edges_2.py  test_render_no_css_leak.py  test_renderer_consistency.py  test_rendering.py  test_scipy_validation.py  test_snapshot.py  test_statistical_correctness.py  test_stats.py  test_summary_edges.py  (+13 more)
tests/fixtures/scipy_validation/: README.md  anova_oneway.json  chi_square.json  fisher_2x2.json  kruskal_wallis.json  student_t.json  svyttest.json  weighted_mean.json  welch_t_test.json  wilcoxon_rank_sum.json
